2024-06-06T00:42:23Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9393240193 # 318
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-06
* notice: last 14d: unq all: 6 20
* notice: prev accum: outdated-unq outdated-all / unq all: 817 1289 / 836 1311
* notice: next accum: outdated-unq outdated-all / unq all: 818 1291 / 836 1311
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-05-22] / []

2024-06-05T00:42:22Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9376276828 # 317
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-05
* notice: last 14d: unq all: 6 22
* notice: prev accum: outdated-unq outdated-all / unq all: 815 1287 / 835 1310
* notice: next accum: outdated-unq outdated-all / unq all: 817 1289 / 836 1311
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-05-21] / [2024-06-04]

2024-06-04T00:42:45Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9359306908 # 316
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-04
* notice: last 14d: unq all: 6 23
* notice: prev accum: outdated-unq outdated-all / unq all: 813 1285 / 834 1309
* notice: next accum: outdated-unq outdated-all / unq all: 815 1287 / 835 1310
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-05-20] / [2024-06-03]

2024-06-03T00:43:21Z: