@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-06-06T00:42:23Z",
-  "count_outdated" : 1291,
-  "uniques_outdated" : 818,
-  "count" : 1311,
-  "uniques" : 836,
+  "timestamp" : "2024-06-07T00:43:37Z",
+  "count_outdated" : 1293,
+  "uniques_outdated" : 820,
+  "count" : 1312,
+  "uniques" : 837,
   "clones" : [
-    {
-      "timestamp": "2024-05-23T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2024-05-24T00:00:00Z",
       "count": 2,
@@ -115,6 +106,15 @@
     },
     {
       "timestamp": "2024-06-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-06-06T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
