@@ -1,12 +1,7 @@
 {
-  "count": 20,
+  "count": 19,
   "uniques": 6,
   "clones": [
-    {
-      "timestamp": "2024-05-23T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2024-05-24T00:00:00Z",
       "count": 2,
@@ -64,6 +59,11 @@
     },
     {
       "timestamp": "2024-06-04T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-06-06T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
