@@ -1,3 +1,12 @@
+2024-06-07T00:43:37Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9409814423 # 319
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-07
+* notice: last 14d: unq all: 6 19
+* notice: prev accum: outdated-unq outdated-all / unq all: 818 1291 / 836 1311
+* notice: next accum: outdated-unq outdated-all / unq all: 820 1293 / 837 1312
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2024-05-23] / [2024-06-06]
+
 2024-06-06T00:42:23Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9393240193 # 318
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-06
